# rust-bls-remote-signer

./: Cargo.toml  Makefile  README.md
.github/workflows/: test-suite.yml
bls-remote-signer/: Cargo.toml
bls-remote-signer/backend/: Cargo.toml
bls-remote-signer/backend/src/: error.rs  lib.rs  storage.rs  storage_dummy.rs  storage_raw_dir.rs  utils.rs  zeroize_string.rs
bls-remote-signer/client/: Cargo.toml
bls-remote-signer/client/src/: api_error.rs  api_response.rs  backend.rs  config.rs  handler.rs  lib.rs  rest_api.rs  router.rs  signing_root.rs  upcheck.rs
bls-remote-signer/environment/: Cargo.toml
bls-remote-signer/environment/src/: executor.rs  lib.rs
bls-remote-signer/src/: main.rs
bls-remote-signer/tests/: get_public_keys.rs  sign.rs  sign_attestation.rs  sign_block.rs  sign_message.rs  sign_randao.rs  upcheck.rs
bls-remote-signer/tests/api_test/: mod.rs
bls-remote-signer/version/: Cargo.toml
bls-remote-signer/version/src/: lib.rs
docs/: eip-draft_bls_remote_signer_api.md
testing/helpers/: Cargo.toml
testing/helpers/src/: constants.rs  lib.rs
