[workspace]
members = [
	"bls-remote-signer",
	"bls-remote-signer/backend",
	"bls-remote-signer/client",
	"bls-remote-signer/environment",
	"bls-remote-signer/version",

	"testing/helpers"
]

[patch]
[patch.crates-io]
eth2_hashing = { git = "https://github.com/sigp/lighthouse", tag = "v0.2.13" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", tag = "v0.2.13" }
tree_hash = { git = "https://github.com/sigp/lighthouse", tag = "v0.2.13" }
