[workspace]
members = [
	"bls-remote-signer",
	"bls-remote-signer/backend",
	"bls-remote-signer/client",
	"bls-remote-signer/environment",
	"bls-remote-signer/version",

	"testing/helpers"
]

# v0.3.2 maps to 36bd4d87f04260d6c329c16600f26d7de98fedf9
[patch]
[patch.crates-io]
eth2_hashing = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
tree_hash = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9"}
tree_hash_derive = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
