[package]
name = "bls_remote_signer"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2018"

[features]
# Compiles the BLS crypto code so that the binary is portable across machines.
portable = ["bls/supranational-portable"]
# Uses the slower Milagro BLS library, which is written in native Rust.
milagro = ["bls/milagro"]

[dev-dependencies]
client_backend = { path = "./backend", package = "backend"  }
helpers = { path = "../testing/helpers", package = "helpers"  }

[dependencies]
bls = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
clap = "2.33.3"
client = { path = "./client" }
environment = { path = "./environment" }
serde_json = "1.0.58"
slog = { version = "2.5.2", features = ["max_level_trace"] }
types = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9"}
version = { path = "./version" }
