[package]
name = "backend"
version = "0.1.0"
authors = ["Herman Junge <herman@sigmaprime.io>"]
edition = "2018"

[dev-dependencies]
helpers = { path = "../../testing/helpers", package = "helpers"  }
sloggers = "1.0.1"
tempdir = "0.3.7"

[dependencies]
bls = { git = "https://github.com/sigp/lighthouse", tag = "v0.2.13" }
clap = "2.33.3"
ethereum-types = "0.9.1"
lazy_static = "1.4.0"
regex = "1.3.9"
slog = "2.5.2"
