[package]
name = "backend"
version = "0.2.0"
authors = ["Herman Junge <herman@sigmaprime.io>"]
edition = "2018"

[dev-dependencies]
helpers = { path = "../../testing/helpers", package = "helpers"  }
sloggers = "1.0.1"
tempdir = "0.3.7"

[dependencies]
bls = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
clap = "2.33.3"
hex = "0.4.2"
lazy_static = "1.4.0"
regex = "1.3.9"
slog = "2.5.2"
types = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
zeroize = { version = "1.1.1", features = ["zeroize_derive"] }
