[package]
name = "client"
version = "0.2.0"
authors = ["Herman Junge <herman@sigmaprime.io>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
client_backend = { path = "../backend", package = "backend" }
environment = { path = "../environment" }
futures = "0.3.6"
hyper = "0.13.8"
lazy_static = "1.4.0"
regex = "1.3.9"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
slog = "2.5.2"
types = { git = "https://github.com/sigp/lighthouse", rev = "83ae12a1b4719f073ccc3db473ac3a05cf51ac54" }
