[package]
name = "environment"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
ctrlc = { version = "3.1.6", features = ["termination"] }
exit-future = "0.2.0"
futures = "0.3.6"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-term = "2.6.0"
sloggers = "1.0.1"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
types = { git = "https://github.com/sigp/lighthouse", rev = "83ae12a1b4719f073ccc3db473ac3a05cf51ac54" }
