[package]
name = "helpers"
version = "0.2.0"
authors = ["Herman Junge <herman@sigmaprime.io>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
client = { path = "../../bls-remote-signer/client" }
environment = { path = "../../bls-remote-signer/environment" }
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tempdir = "0.3.7"
types = { git = "https://github.com/sigp/lighthouse", rev = "36bd4d87f04260d6c329c16600f26d7de98fedf9" }
